# PlanMode

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.hermes/plans/: 2026-07-11_plan-mode-implementation-plan.md  2026-07-11_plan-mode-opencode-detailed.md
bot/: client.py  handlers.py
config/: settings.py
database/: core.py  crud.py  models.py
deploy/: plan-mode.service  setup.sh
llm/: deepseek_client.py  prompts.py
scripts/: init_db.py  test_db.py  test_deepseek.py
services/: agent.py  daily_view.py  date_parser.py  image_handler.py  intent_parser.py  memory.py  memory_compression.py  queries.py  schedule_image.py  scheduler.py  status_report.py  summary.py  timezone.py  transcription.py
services/tools/: __init__.py  _utils.py  items.py  memory_tools.py  messaging.py  reasoning.py  reminders.py  schemas.py  sections.py  views.py
tests/: conftest.py  test_agent_loop.py  test_date_parser.py  test_handlers.py  test_intent_parser.py  test_language.py  test_memory.py  test_memory_compression.py  test_persistence.py  test_process_guard.py  test_queries.py  test_schedule_image.py  test_scheduler.py  test_summary.py  test_tools.py
utils/: audio.py  process_guard.py  time.py  tool_result.py
