[project]
name = "plan-mode"
version = "0.1.0"
description = "Personal AI assistant delivered as a Discord bot"
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.4.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "apscheduler>=3.10.0",
    "openai>=1.35.0",
    "faster-whisper>=1.0.0",
    "pillow>=10.0.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "tzdata>=2024.1",
    "pydub>=0.25.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4.0", "mypy>=1.10.0"]

[tool.setuptools]
packages = ["bot", "config", "database", "llm", "services", "utils"]
py-modules = ["main"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
